--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,2 +1,14 @@
-h1 {
-  color: red; }
+.max-width-50{
+  max-width: 50%;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.user-avatar{
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
