--- a/src/resoures/views/courses/create.hbs
+++ b/src/resoures/views/courses/create.hbs
@@ -2,18 +2,26 @@
     <h3>Dang khoa hoc</h3>
     <div class=" mt-4">
    <form method="POST" action="/courses/store">
-    <div class="form-group">
+        <div class="form-group">
             <label for="name" class="form-label">Name</label> <br>
             <input type="text" name="name" class="form-control" id="name"> 
         </div>
         <div class="form-group">
-            <label for="description">Description</label> <br>
-            <input type="text" name="description" class="form-control" id="description">
+            <label for="image">image</label> <br>
+            <input type="text" name="image" class="form-control" id="image">
         </div>
         <div class="form-group">
+            <label for="videoID">videoID</label> <br>
+            <input type="text" name="videoID" class="form-control" id="videoID">
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label> <br> 
+            <input type="text" name="description" class="form-control" id="description">
+        </div>
+        {{!-- <div class="form-group">
             <label for="videoID" class="form-label">Video</label> <br>
             <input type="text" name="videoID" class="form-control" id="videoID ">
-        </div>
+        </div> --}}
         <div class="form-group">
             <label for="level" class="form-label">Level</label> <br>
             <input type="text" name="level" class="form-control" id="level">
