--- a/src/resoures/views/partials/header.hbs
+++ b/src/resoures/views/partials/header.hbs
@@ -15,10 +15,7 @@
             Thông báo
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/courses/create">Đăng khóa học</a></li>
-            <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a></li>
-            <li><a class="dropdown-item" href="#">Bài viết của tôi</a></li>
-            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+            <li><a class="dropdown-item" href="/me/stored/courses">Thông báo của tôi</a></li>
           </ul>
         </li>
       </ul>
