--- a/src/resoures/views/user/student.hbs
+++ b/src/resoures/views/user/student.hbs
@@ -4,10 +4,8 @@
             <button class="btn btn-success">HOC NGAY</button>
         </div>
         <div class="col-lg-9">
-            <h2>Student</h2>
-            <p>
-               Phan Dai Cat
-            </p>
+            <h2>{{data.email}}</h2>
+            <h3>{{data.mssv}}</h3>
         </div>
     </div>
 </div>
