--- a/src/resoures/views/home.hbs
+++ b/src/resoures/views/home.hbs
@@ -1,5 +1,5 @@
 
-<div class="mt-4">
+{{!-- <div class="mt-4">
     <div class="row">
         {{#each courses}}
         <div class="col-sm-6 col-lg-4 mt-4">
@@ -18,4 +18,45 @@
         </div>
         {{/each}}  
     </div>
+</div> --}}
+
+<div class="container ">
+    <header class="row mt-4">
+        <div class="box bg-secondary " style="height: 160px; border-radius: 5px;">
+            <h1>Niên Luận Cơ Sở</h1>
+        </div>
+    </header>
+    <main>
+        <div class="row mt-4">
+            <div class="col-3">
+                <form action="" class="border">
+                    <h3>Sắp đến hạn</h3>
+                    <p>Tuyệt vời không có bài tập nào hết hạn cả</p>
+                </form>
+            </div>
+            <div class="col-9">
+                <form action="/note"  method="POST" name="form" class="form-inline d-flex">
+                    {{!-- <input name="thongbao" type="textarea" class="form-control pb-4 mr-5" placeholder="Thông báo nội dung nào đó cho lớp học"> --}}
+                    <textarea name="thongbao" id="" cols="100" rows="2" placeholder="Thông báo nội dung nào đó cho lớp học"></textarea>
+                    <button id="btn" type="" class="btn btn-success" >Đăng</button>
+                </form>
+
+                <hr>
+
+                {{#each notes}}
+                <form action="" class="mt-4 mb-4 border">
+                    <div class="ml-15">
+                        <p class="">
+                        {{this.thongbao}}
+                        </p>
+                        <p class="text-end mx-2">
+                            {{this.createdAt}}
+                        </p>
+                    </div>
+                </form>
+                {{/each}}
+            </div>
+        </div>
+    </main>
 </div>
+
