--- a/src/resoures/views/user/admin.hbs
+++ b/src/resoures/views/user/admin.hbs
@@ -1,1 +1,16 @@
 <h1>ADMIN PAYOUT</h1>
+
+<div class="mt-4">
+    <div class="row">
+        {{#each data}}
+        <div class="col-sm-6 col-lg-4 mt-4 ">
+            <div class="card" style="width: 18rem;">
+                <h1>{{this.mssv}}</h1>
+                <h1>{{this.email}}</h1>
+                <h1>{{this.pass}}</h1>
+                <h1>{{this.point}}</h1>
+            </div>
+        </div>
+        {{/each}}  
+    </div>
+</div>
