--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -10,6 +10,10 @@
   margin-right: 30px;
 }
 
+.mr-10{
+  margin-right: 10px;
+}
+
 .ml-auto{
   margin-left: auto;
 }
@@ -23,4 +27,8 @@
 
 .white{
   background-color:   #ffffff;
+}
+
+.color_primary{
+  color: #f0f2f5;
 }
