--- a/src/resoures/views/user/student.hbs
+++ b/src/resoures/views/user/student.hbs
@@ -29,7 +29,7 @@
             </main>
         </div>
         <div class="col-lg-4">
-            <form method="POST" action="/authentication/student/{{data._id}}?_method=PUT" class="border border-5 rounded text-center white ">
+            <form method="POST" action="/authentication/student/{{data._id}}?_method=PUT" class="border border-5 rounded text-center white "  enctype = "multipart/form-data" > 
                 <label for="file"><h1>Bài tập của bạn</h1></label>
                 <input type="file" class="mt-3" name="file" id="file">
                 <button type="submit" class="btn btn-primary my-3">Đánh dấu là đã hoàn thành</button>
