--- a/src/resoures/views/home.hbs
+++ b/src/resoures/views/home.hbs
@@ -24,9 +24,8 @@
                 </form>
                 <hr>
                 {{#each notes}}
-                <form action="" class="mt-4 mb-4 border rounded border-dark  bg-light">
-                    <div class="ml-15 ">
-                        <p class="">
+                    <div class=" hover_large mt-3 border rounded mb-3 ">
+                        <p class="notification">
                             {{this.thongbao}}
                         </p>
                         
@@ -34,7 +33,6 @@
                             {{this.createdAt}}
                         </p>
                     </div>
-                </form>
                 {{/each}}
             </div>
         </div>
