--- a/src/resoures/views/user/student.hbs
+++ b/src/resoures/views/user/student.hbs
@@ -1,8 +1,8 @@
 <div class="mt-4"> 
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-lg-8    ">
             <header>
-                <h1>Niên luận</h1>
+                <h2>Đề tài : Quản lí sinh viên làm niên luận</h2>
                 <p>Giáo viên giảng dạy</p>
                 <span>100 điểm</span>
                 <hr>
@@ -19,7 +19,8 @@
                                     </div>
                                     <p><b>MSSV</b> : {{data.mssv}}</p>
                                     <p><b>Email</b> : {{data.email}} </p>
-                                    <p><b>Bài làm</b> : <a href="{{data.image}}">{{data.image}}</a></p> 
+                                    <p><b>Đề tài :</b> : {{data.detai}} </p>
+                                    <p><b>Bài làm</b> : <a class="word_wrap" href="{{data.image}}">{{data.image}}</a></p> 
                                     <p><b>Điểm số</b> : <span style="color: red;">{{data.point}} </span></p>
                                 </div>
                             </div>
@@ -28,13 +29,17 @@
                 </div>
             </main>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 ml-5">
             <form  method="POST" action="/uploads/{{data._id}}?_method=PUT" class="border border-5 rounded text-center white "  enctype = "multipart/form-data" name="form_nopbai" > 
                 <label for="image"><h1>Bài tập của bạn</h1></label> 
                 <input required  type="file" class="mt-3" name="image" id="image" style="width: 220px;"> <span id="submitted_file"></span>
                 <button id="btn_file" type="submit" class="btn btn-primary my-3">Đánh dấu là đã hoàn thành</button>
             </form>
-            
+            <ul class="list-group list-group-flush mt-3 text-center">
+                <li class="list-group-item hover_large     "><a href="/" class="text-decoration-none color_black">Thông báo</a></li>
+                <li class="list-group-item hover_large mt-2"><a href="#" class="text-decoration-none color_black">Đặt câu hỏi</a></li>
+                <li class="list-group-item hover_large mt-2"><a href="#" class="text-decoration-none color_black">Phản hồi</a></li>
+            </ul>
         </div>
     </div>
 </div>
