--- a/src/resoures/views/home.hbs
+++ b/src/resoures/views/home.hbs
@@ -2,6 +2,7 @@
 <div class="container ">
     <header class="row mt-4">
         <img src="" alt="" class="img_bg">
+        <h1>Niên luận cơ sở</h1>
     </header>
     <main>
         <div class="row mt-4">
