--- a/src/resoures/views/partials/header.hbs
+++ b/src/resoures/views/partials/header.hbs
@@ -38,7 +38,7 @@
             <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/authentication/register">Register</a></li>
               <li><a class="dropdown-item" href="/authentication/login">Sing in</a></li>
-              <li><a class="dropdown-item" href="/authentication/login">Log out</a></li>
+              <li><a class="dropdown-item" href="/authentication/logout/stores">Log out</a></li>
             </ul>
           </li>
         </ul>
