--- a/src/resoures/views/user/admin.hbs
+++ b/src/resoures/views/user/admin.hbs
@@ -4,13 +4,13 @@
 <div class="mt-4">
     <div class="row">
         {{#each data}}
-        <div class="mt-2 mb-4 ">
+        <div class="mt-2 mb-4 col-4">
             <div class="border border-2 rounded" >
                 <div class="box " style="margin-left: 8px; margin-right: 8px;">
                     <p><b>Họ và tên</b>  : {{this.ten}}</p>
                     <p><b>MSSV</b> : {{this.mssv}}</p>
                     <p><b>Email</b> : {{this.email}}</p>
-                    <p><b>Bài làm</b> : <a href="{{this.image}}">{{this.image}}</a></p>
+                    <p><b>Bài làm</b> : <a class="word_wrap" href="{{this.image}}">{{this.image}}</a></p>
                     <p><b>Điểm số</b> : <span style="color: red;"> {{this.point}}</span></p>
                     <form method="POST" action="/authentication/teacher/{{this._id}}?_method=PUT" class="form-inline">
                         <label for="point"><b>Nhập điểm</b></label>
