--- a/src/resoures/views/layouts/main.hbs
+++ b/src/resoures/views/layouts/main.hbs
@@ -21,7 +21,7 @@
         <div class="app">
             {{!-- nap partials header.hbs  --}}
             {{> header}}
-            <div class="container"> 
+            <div class="container min_height"> 
                 {{{body}}}
             </div>
             {{> footer}}
